install/kubernetes/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventario-backend
  namespace: inventario
  labels:
    app: inventario-backend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: inventario-backend
    spec:
      containers:
        - name: inventario-backend
          image: registry.k3s.aika.website/inventario-backend:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /opt/inventariobackend/files
              name: inventario-pv
          resources:
            limits:
              cpu: "350m"
              memory: "256Mi"
              ephemeral-storage: "256Mi"
      volumes:
        - name: inventario-pv
          persistentVolumeClaim:
            claimName: inventario-pvc
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
  selector:
    matchLabels:
      app: inventario-backend
---
apiVersion: v1
kind: Service
metadata:
  name: inventario-backend
spec:
  selector:
    app: inventario-backend
  ports:
    - port: 80
      targetPort: 80
